--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,9 @@ name = "sln_parser"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 uuid = { version = "1.1", features = ["serde"] }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "3.2.8", features = ["derive"] }
